--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,95 @@
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=League+Spartan:wght@100..900&display=swap');
+
+/* Other CSS rules */
 .App {
   text-align: center;
-  background-color:black;
-  color:beige;
 }
 
-.home {
+.Home {
   text-align: center;
+  background-color:561C24;
+  color:#E8D8C4;
 }
+
+.text {
+  font-size: 1.5rem;
+  align-items: center;
+}
+
+body {
+  background-color:#503C3C;
+  font-family: "League Spartan", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  padding: 5%;
+}
+
+/* nav bar */
+
+.navbar-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav {
+  background: #fff;
+  border-radius: 50px;
+  padding: 10px;
+  box-shadow: 0 25px 20px -20px rgba(0, 0, 0, 0.4);
+}
+nav ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 15px 35px;
+  margin: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  color: #777;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+  transition: color 0.2s;
+}
+nav ul li::after {
+  content: "";
+  background: #EEA5A6;
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 0;
+  transition: top 0.5s, opacity 0.5s;
+}
+nav ul li:hover {
+  color: #fff;
+}
+nav ul li:hover::after {
+  top: 50%;
+  opacity: 1;
+}
+
+/* title */
+
+#title {
+  font-style: normal;
+  color: #EEA5A6;
+  font-family: "DM Serif Display";
+  font-weight: 400;
+  font-style: normal;
+  font-size: 7rem;
+}
+
+/* title animation */
+
+
+
+/* given */
 
 .App-logo {
   height: 40vmin;
