--- a/src/App.css
+++ b/src/App.css
@@ -89,12 +89,31 @@ nav ul li:hover::after {
 
 /* title animation */
 
+/* intro/beginning section */
+
+#intro-text img {
+  max-width: 30%; /* Make sure the image doesn't exceed the width of the div */
+  max-height: 30%; /* Make sure the image doesn't exceed the height of the div */
+  display: block; /* Ensure the image is treated as a block element */
+  margin: auto; /* Center the image horizontally */
+}
+
 /* skills page */
 #skills {
   background-color: #E8D8C4;
   margin: 15vh;
   height: 100%;
   padding: 5% 15%;
+  text-align: center;
+  max-width: 100%; /* Ensure the div doesn't exceed its container's width */
+  overflow: hidden; /* Hide any content that overflows the div */
+  display: inline-block; /* Display the images in a single line */
+}
+
+.skill-images {
+  margin: 0 10px; /* Add some space between the images */
+  max-width: 15%; /* Ensure images don't exceed the width of their container */
+  height: auto; /* Maintain the aspect ratio of the images */
 }
 
 #skills h1 {
