--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,11 @@ body {
   color: white;
 }
 
+.navbar-container a {
+  text-decoration: none;
+  color: black;
+}
+
 .App-link {
   color: #61dafb;
 }
