--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,52 +1,91 @@
-/* footer */
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=League+Spartan:wght@100..900&display=swap');
 
-footer {
+
+.footer-container {
+  border-radius: 50px;
+  background-color: #F6F6F6;
+  text-align: left;
+  font-family: "League Spartan", sans-serif;
+  font-size: 1.5rem;
+}
+
+.row{
+	display: flex;
+	flex-wrap: wrap;
   width: 100%;
 }
 
-.navbar-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+ul{
+	list-style: none;
+}
+
+.footer-col{
+  width: 20%;
+  padding: 25px;
+}
+
+.footer-col h4{
+	font-size: 1.3rem;
+	color: #212121;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 600;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #6D9886;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #212121;
+	text-decoration: none;
+	font-weight: 400;
+  font-size: 1rem;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #6D9886;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: #6D9886;
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #6D9886;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #6D9886;
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col{
     width: 100%;
-  }
-  
-  nav {
-    background: #fff;
-    padding: 10px;
-    box-shadow: 0 25px 20px -20px rgba(0, 0, 0, 0.4);
-  }
-  nav ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 15px 35px;
-    margin: 10px;
-    font-size: 18px;
-    font-weight: 500;
-    color: #777;
-    cursor: pointer;
-    position: relative;
-    z-index: 2;
-    transition: color 0.2s;
-  }
-  nav ul li::after {
-    content: "";
-    background: #EEA5A6;
-    width: 100%;
-    height: 100%;
-    border-radius: 30px;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-    opacity: 0;
-    transition: top 0.5s, opacity 0.5s;
-  }
-  nav ul li:hover {
-    color: #fff;
-  }
-  nav ul li:hover::after {
-    top: 50%;
-    opacity: 1;
-  }
+}
+}
